cmake_minimum_required(VERSION 4.0)
project(ObjectOrientedProgramming_CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(ObjectOrientedProgramming_CPP
        "Labs/Week 10/main.cpp"
        "Labs/Week 3/main.cpp"
        "Labs/Week 4/main.cpp"
        "Labs/Week 5/cerinte.cpp"
        "Labs/Week 5/main.cpp"
        "Labs/Week 6/main.cpp"
        "Labs/Week 9/cerinte.cpp"
        "Labs/Week 9/main.cpp"
        "Week 11/main.cpp")
